--- a/ml_project/AirBnB.ipynb
+++ b/ml_project/AirBnB.ipynb
@@ -12,9 +12,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "adf53027",
+      "id": "14e90f5c",
       "metadata": {
-        "id": "adf53027"
+        "id": "14e90f5c"
       },
       "source": [
         "**ML Project: AirBnB New York city 가격 예측하기**  \n",
@@ -25,9 +25,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "fe3f538d",
+      "id": "78a25883",
       "metadata": {
-        "id": "fe3f538d"
+        "id": "78a25883"
       },
       "source": [
         "**1. Baseline - 라이브러리와 데이터 불러오기**"
@@ -36,9 +36,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "93045676",
+      "id": "29ddc680",
       "metadata": {
-        "id": "93045676"
+        "id": "29ddc680"
       },
       "outputs": [],
       "source": [
@@ -49,9 +49,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "13dd8a2f",
+      "id": "2ffe7b46",
       "metadata": {
-        "id": "13dd8a2f"
+        "id": "2ffe7b46"
       },
       "outputs": [],
       "source": [
@@ -63,9 +63,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "df5a801d",
+      "id": "9e8c4e2d",
       "metadata": {
-        "id": "df5a801d"
+        "id": "9e8c4e2d"
       },
       "source": [
         "**2. EDA(탐색적 데이터 분석) - 탐색적으로 데이터 살펴보기**"
@@ -74,10 +74,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "57bd0057",
+      "id": "0ca49d61",
       "metadata": {
-        "id": "57bd0057",
-        "outputId": "67d645a1-55c9-45fd-a378-92e0498e54fd"
+        "id": "0ca49d61",
+        "outputId": "afa4fc39-bbec-4b39-9919-6abdfaa1f337"
       },
       "outputs": [
         {
@@ -86,7 +86,7 @@
               "((39116, 16), (9779, 15))"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -99,10 +99,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "390e728d",
+      "id": "cca1870b",
       "metadata": {
-        "id": "390e728d",
-        "outputId": "b630cc3e-0049-4743-8332-4a0c95e07337"
+        "id": "cca1870b",
+        "outputId": "572c5f80-01fa-4789-d053-936d9ff4c9ac"
       },
       "outputs": [
         {
@@ -318,10 +318,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "55aa0703",
+      "id": "7f9cc560",
       "metadata": {
-        "id": "55aa0703",
-        "outputId": "09745ada-8346-4e18-d7d5-48e90b5276ad"
+        "id": "7f9cc560",
+        "outputId": "b3d865c2-5382-4722-9126-4e225800fcab"
       },
       "outputs": [
         {
@@ -362,10 +362,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "ae12343b",
+      "id": "ed009773",
       "metadata": {
-        "id": "ae12343b",
-        "outputId": "db4a7854-1ec0-4748-f39f-c1c27edc12a4"
+        "id": "ed009773",
+        "outputId": "aeec0745-67eb-4935-811e-3efbd3bc3765"
       },
       "outputs": [
         {
@@ -390,7 +390,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 56,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -403,10 +403,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "48848735",
+      "id": "27be7962",
       "metadata": {
-        "id": "48848735",
-        "outputId": "5986cde8-5098-4d6d-9876-764f3423cf7f"
+        "id": "27be7962",
+        "outputId": "5c14d8dd-f8d7-4d7b-ad6a-617e9fb8b090"
       },
       "outputs": [
         {
@@ -430,7 +430,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,10 +443,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "14e8ed1a",
+      "id": "ef1e440b",
       "metadata": {
-        "id": "14e8ed1a",
-        "outputId": "63229c9f-d609-4b43-8843-80cb4ef860eb"
+        "id": "ef1e440b",
+        "outputId": "bf141c06-bc76-49d4-8ed3-bb588a8a60d5"
       },
       "outputs": [
         {
@@ -455,7 +455,7 @@
               "<AxesSubplot:>"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -480,10 +480,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "336e02e6",
+      "id": "b2a06e0c",
       "metadata": {
-        "id": "336e02e6",
-        "outputId": "45d97c8e-15d8-4da3-faff-f367af2a5361"
+        "id": "b2a06e0c",
+        "outputId": "25aeb03b-422b-4517-ae90-056faf0ce9d7"
       },
       "outputs": [
         {
@@ -500,7 +500,7 @@
               "Name: price, dtype: float64"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -513,10 +513,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "74a672a3",
+      "id": "818faddf",
       "metadata": {
-        "id": "74a672a3",
-        "outputId": "aef678f5-a602-48ff-9a0b-7ce6b6af7f0e"
+        "id": "818faddf",
+        "outputId": "1a009025-d102-4327-eaa5-2244c9d2ba1f"
       },
       "outputs": [
         {
@@ -536,7 +536,7 @@
               "Name: host_id, Length: 30845, dtype: int64"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -548,9 +548,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "61864120",
+      "id": "f84023ad",
       "metadata": {
-        "id": "61864120"
+        "id": "f84023ad"
       },
       "source": [
         "**3. 데이터 전처리 - 데이터를 살펴보고 판단하여 결측치 및 이상치를 처리**"
@@ -559,26 +559,26 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "f3db9803",
+      "id": "bea1415a",
       "metadata": {
-        "id": "f3db9803"
+        "id": "bea1415a"
       },
       "outputs": [],
       "source": [
         "# 결측치 컬럼 삭제(last_review)\n",
-        "# train = train.drop(columns=['last_review'])\n",
-        "# test = test.drop(columns=['last_review'])\n",
+        "train = train.drop(columns=['last_review'], axis=1)\n",
+        "test = test.drop(columns=['last_review'], axis=1)\n",
         "\n",
-        "train = train.drop('last_review', axis=1)\n",
-        "test = test.drop('last_review', axis=1)"
+        "# train = train.drop('last_review', axis=1)\n",
+        "# test = test.drop('last_review', axis=1)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "893879dd",
+      "id": "ebf03f2e",
       "metadata": {
-        "id": "893879dd"
+        "id": "ebf03f2e"
       },
       "outputs": [],
       "source": [
@@ -593,10 +593,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "942a13b1",
+      "id": "7d015306",
       "metadata": {
-        "id": "942a13b1",
-        "outputId": "46c4b3ab-b603-42e3-f890-4438e7835ad4"
+        "id": "7d015306",
+        "outputId": "51b5a682-7071-41f2-aec3-04375e95f7bb"
       },
       "outputs": [
         {
@@ -646,9 +646,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "091344ab",
+      "id": "c1004836",
       "metadata": {
-        "id": "091344ab"
+        "id": "c1004836"
       },
       "outputs": [],
       "source": [
@@ -662,9 +662,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "829e9efe",
+      "id": "ab5dc7f4",
       "metadata": {
-        "id": "829e9efe"
+        "id": "ab5dc7f4"
       },
       "outputs": [],
       "source": [
@@ -678,9 +678,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "f7be98cf",
+      "id": "0906b2df",
       "metadata": {
-        "id": "f7be98cf"
+        "id": "0906b2df"
       },
       "source": [
         "**4. 검증 데이터 분리 - Train 데이터로 학습(훈련), Validation(검증용) 데이터로 예측**"
@@ -689,10 +689,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "b77f48b8",
+      "id": "03857c61",
       "metadata": {
-        "id": "b77f48b8",
-        "outputId": "7e7ef36b-f49a-4de9-e2f9-244e4ad4ed44"
+        "id": "03857c61",
+        "outputId": "e1a7ca1b-9944-42ee-acbb-e91af566ca2e"
       },
       "outputs": [
         {
@@ -701,7 +701,7 @@
               "((31292, 8), (7824, 8), (31292,), (7824,))"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -716,9 +716,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "58ea7901",
+      "id": "b474d31d",
       "metadata": {
-        "id": "58ea7901"
+        "id": "b474d31d"
       },
       "source": [
         "**5. 머신러닝**"
@@ -727,10 +727,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "0e70c954",
+      "id": "bec62378",
       "metadata": {
-        "id": "0e70c954",
-        "outputId": "36e09153-8d7d-46e6-8cd7-4d6b8a69763b"
+        "id": "bec62378",
+        "outputId": "6b568695-34c5-4620-f4ba-915a85758bed"
       },
       "outputs": [
         {
@@ -756,10 +756,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "1191679b",
+      "id": "a8ef3734",
       "metadata": {
-        "id": "1191679b",
-        "outputId": "346e3867-2ad6-4c8c-ac7c-45a3e808e6ef"
+        "id": "a8ef3734",
+        "outputId": "8a69a1cd-ea2d-4d12-bde3-f7e31a1828a4"
       },
       "outputs": [
         {
@@ -792,10 +792,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "456bc269",
+      "id": "6da00dea",
       "metadata": {
-        "id": "456bc269",
-        "outputId": "9bf05b92-1ef0-4e4c-bbeb-da74451e92d2"
+        "id": "6da00dea",
+        "outputId": "e0cbf861-dc20-485f-beb8-e9edd6d89825"
       },
       "outputs": [
         {
@@ -820,10 +820,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "29c091a3",
+      "id": "7d4447a5",
       "metadata": {
-        "id": "29c091a3",
-        "outputId": "7f189c4b-383c-4c4b-da8b-b6905262a85f"
+        "id": "7d4447a5",
+        "outputId": "ee7fb277-1c83-461e-e6b7-b3c9b1fd390d"
       },
       "outputs": [
         {
@@ -848,17 +848,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "eaf74f72",
+      "id": "8b5a9ae4",
       "metadata": {
-        "id": "eaf74f72",
-        "outputId": "c8529fd7-5ef0-4756-a01d-e7992a1a9526"
+        "id": "8b5a9ae4",
+        "outputId": "2c917192-57a7-494d-aa78-a733835bfa05"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "32431.396398542947\n"
+            "32553.18802487219\n"
           ]
         }
       ],
@@ -876,17 +876,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "cb3a30d2",
+      "id": "7dcf879a",
       "metadata": {
-        "id": "cb3a30d2",
-        "outputId": "9fa65f97-8bc7-4a59-9c5e-60777ccd2ec7"
+        "id": "7dcf879a",
+        "outputId": "c6f2b986-a0aa-4dfd-b55f-a97bee8e6a45"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "30854.728654977484\n"
+            "29055.401018814955\n"
           ]
         }
       ],
@@ -894,7 +894,12 @@
         "# Xgboost\n",
         "from xgboost import XGBRegressor\n",
         "\n",
-        "xgboost = XGBRegressor(n_estimators=50, random_state=2022)\n",
+        "xgboost = XGBRegressor(\n",
+        "    n_estimators=500,\n",
+        "    random_state=2022,\n",
+        "    max_depth=7,\n",
+        "    learning_rate=0.05\n",
+        ")\n",
         "xgboost.fit(X_train, y_train)\n",
         "pred_xgboost = xgboost.predict(X_val)\n",
         "mse_xgboost = mean_squared_error(y_val, pred_xgboost)\n",
@@ -903,9 +908,9 @@
     },
     {
       "cell_type": "markdown",
-      "id": "68850e54",
+      "id": "4821dc0a",
       "metadata": {
-        "id": "68850e54"
+        "id": "4821dc0a"
       },
       "source": [
         "**6. 채점**"
@@ -914,46 +919,34 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "6f630072",
+      "id": "95bc7b88",
       "metadata": {
-        "id": "6f630072",
-        "outputId": "12212e26-0822-4185-be8b-a87baf61fcd5"
+        "id": "95bc7b88"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "50706.07011590477"
-            ]
-          },
-          "execution_count": 92,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# test 데이터 예측 및 평가\n",
         "y_test = pd.read_csv('/aiffel/data/y_test.csv')\n",
         "\n",
-        "# Xgboost\n",
+        "# Xgboost - 성능이 가장 좋았어요\n",
         "n_pred = xgboost.predict(test)\n",
-        "mean_squared_error(y_test, n_pred)"
+        "mse_xgboost_test = mean_squared_error(y_test, n_pred)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "a46abaf6",
+      "id": "484407fb",
       "metadata": {
-        "id": "a46abaf6",
-        "outputId": "9461cab5-9ea8-4606-981f-a8ca7a5923ba"
+        "id": "484407fb",
+        "outputId": "7d6ef6aa-0d1c-4d61-ff9c-dbacd98744d1"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "나의 점수는 50864.56910040246 입니다.\n"
+            "나의 점수는 48576.32248801514 입니다.\n"
           ]
         }
       ],
